# platform2.0

./: .env.example  .gitignore  .rubocop.yml  Dockerfile  Gemfile  canvas.md  canvaspec.md  docker-compose.yml  factorfifty-canvas-at-scale.html  factorfifty-platform-redesign.html  importer.md  package-lock.json  package.json  rspec_output.txt  tsconfig.json
app/controllers/: audit_logs_controller.rb  authenticated_controller.rb  azure_credentials_controller.rb  canvas_controller.rb  canvas_environments_controller.rb  customers_controller.rb  dashboards_controller.rb  environments_controller.rb  git_credentials_controller.rb  global_tags_controller.rb  inventory_controller.rb  keycloak_users_controller.rb  module_definitions_controller.rb  module_imports_controller.rb  module_updates_controller.rb  pages_controller.rb  projects_controller.rb  resellers_controller.rb  rightsizing_controller.rb  runners_controller.rb  (+2 more)
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  recurring.yml  routes.rb
db/: schema.rb  seeds.rb
f50-pipeline/: Dockerfile  pyproject.toml
f50-pipeline/api/: auth.py  main.py  schemas.py
f50-pipeline/core/: tag_merger.py
f50-pipeline/engines/: opentofu.py
f50-pipeline/generators/opentofu/: generator.py
f50-pipeline/generators/opentofu/templates/: provider_aws.tf.j2  versions.tf.j2
f50-pipeline/scanners/: tf_scanner.py
f50-pipeline/utils/: callback.py  netrc.py
f50-pipeline/workers/: plan_task.py
public/: 400.html  403.html  404.html  406-unsupported-browser.html  422.html  500.html
spec/: rails_helper.rb
(+304 files in other folders)
