[project]
name = "f50-pipeline"
version = "0.1.0"
description = "FactorFifty OpenTofu pipeline service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-hcl2>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "generators", "engines", "workers", "utils", "scanners"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
